Parcial LPT/Punto 4 y 5/Punto 5/Aplicacion/gramaticaParser.py
# Generated from Punto 4/gramatica.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramaticaParser ( Parser ):

    grammarFileName = "gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'.'", "','", "'*'", "'('", "')'", "'='", "'!'", "'-'", 
                     "'+'", "'>'", "'>='", "'<'", "'<='", "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "CREATE", "TABLE", "FROM", 
                      "READ", "INTO", "ROWS", "UPDATE", "SET", "WHERE", 
                      "DELETE", "NULL", "DOT", "COMMA", "ASTERISK", "LEFT_PARENTHESIS", 
                      "RIGHT_PARENTHESIS", "EQUALS", "NOT", "MINUS", "PLUS", 
                      "GT", "GE", "LT", "LE", "NE", "AND", "OR", "QUOTED_STRING", 
                      "INTEGER_VALUE", "DECIMAL_VALUE", "IDENTIFIER", "WS" ]

    RULE_entry = 0
    RULE_statement = 1
    RULE_create = 2
    RULE_read = 3
    RULE_update = 4
    RULE_delete = 5
    RULE_columnNames = 6
    RULE_values = 7
    RULE_constants = 8
    RULE_expressionList = 9
    RULE_booleanExpression = 10
    RULE_compare = 11
    RULE_expression = 12
    RULE_identifier = 13
    RULE_constant = 14
    RULE_tableIdentifier = 15

    ruleNames =  [ "entry", "statement", "create", "read", "update", "delete", 
                   "columnNames", "values", "constants", "expressionList", 
                   "booleanExpression", "compare", "expression", "identifier", 
                   "constant", "tableIdentifier" ]

    EOF = Token.EOF
    T__0=1
    CREATE=2
    TABLE=3
    FROM=4
    READ=5
    INTO=6
    ROWS=7
    UPDATE=8
    SET=9
    WHERE=10
    DELETE=11
    NULL=12
    DOT=13
    COMMA=14
    ASTERISK=15
    LEFT_PARENTHESIS=16
    RIGHT_PARENTHESIS=17
    EQUALS=18
    NOT=19
    MINUS=20
    PLUS=21
    GT=22
    GE=23
    LT=24
    LE=25
    NE=26
    AND=27
    OR=28
    QUOTED_STRING=29
    INTEGER_VALUE=30
    DECIMAL_VALUE=31
    IDENTIFIER=32
    WS=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class EntryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(gramaticaParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.StatementContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.StatementContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_entry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntry" ):
                listener.enterEntry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntry" ):
                listener.exitEntry(self)




    def entry(self):

        localctx = gramaticaParser.EntryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_entry)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 34
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [2, 5, 8, 11]:
                    self.state = 32
                    self.statement()
                    pass
                elif token in [1]:
                    self.state = 33
                    self.match(gramaticaParser.T__0)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 36 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 2342) != 0)):
                    break

            self.state = 38
            self.match(gramaticaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def create(self):
            return self.getTypedRuleContext(gramaticaParser.CreateContext,0)


        def read(self):
            return self.getTypedRuleContext(gramaticaParser.ReadContext,0)


        def update(self):
            return self.getTypedRuleContext(gramaticaParser.UpdateContext,0)


        def delete(self):
            return self.getTypedRuleContext(gramaticaParser.DeleteContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = gramaticaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 44
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.create()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.read()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 42
                self.update()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 43
                self.delete()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(gramaticaParser.CREATE, 0)

        def TABLE(self):
            return self.getToken(gramaticaParser.TABLE, 0)

        def tableIdentifier(self):
            return self.getTypedRuleContext(gramaticaParser.TableIdentifierContext,0)


        def columnNames(self):
            return self.getTypedRuleContext(gramaticaParser.ColumnNamesContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_create

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate" ):
                listener.enterCreate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate" ):
                listener.exitCreate(self)




    def create(self):

        localctx = gramaticaParser.CreateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_create)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(gramaticaParser.CREATE)
            self.state = 47
            self.match(gramaticaParser.TABLE)
            self.state = 48
            self.tableIdentifier()
            self.state = 49
            self.columnNames()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(gramaticaParser.READ, 0)

        def TABLE(self):
            return self.getToken(gramaticaParser.TABLE, 0)

        def tableIdentifier(self):
            return self.getTypedRuleContext(gramaticaParser.TableIdentifierContext,0)


        def columnNames(self):
            return self.getTypedRuleContext(gramaticaParser.ColumnNamesContext,0)


        def ROWS(self):
            return self.getToken(gramaticaParser.ROWS, 0)

        def values(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.ValuesContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.ValuesContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.COMMA)
            else:
                return self.getToken(gramaticaParser.COMMA, i)

        def getRuleIndex(self):
            return gramaticaParser.RULE_read

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead" ):
                listener.enterRead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead" ):
                listener.exitRead(self)




    def read(self):

        localctx = gramaticaParser.ReadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_read)
        self._la = 0 # Token type
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.match(gramaticaParser.READ)
                self.state = 52
                self.match(gramaticaParser.TABLE)
                self.state = 53
                self.tableIdentifier()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.match(gramaticaParser.READ)
                self.state = 55
                self.match(gramaticaParser.TABLE)
                self.state = 56
                self.tableIdentifier()
                self.state = 57
                self.columnNames()
                self.state = 58
                self.match(gramaticaParser.ROWS)
                self.state = 59
                self.values()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 60
                    self.match(gramaticaParser.COMMA)
                    self.state = 61
                    self.values()
                    self.state = 66
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpdateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UPDATE(self):
            return self.getToken(gramaticaParser.UPDATE, 0)

        def INTO(self):
            return self.getToken(gramaticaParser.INTO, 0)

        def TABLE(self):
            return self.getToken(gramaticaParser.TABLE, 0)

        def tableIdentifier(self):
            return self.getTypedRuleContext(gramaticaParser.TableIdentifierContext,0)


        def columnNames(self):
            return self.getTypedRuleContext(gramaticaParser.ColumnNamesContext,0)


        def ROWS(self):
            return self.getToken(gramaticaParser.ROWS, 0)

        def values(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.ValuesContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.ValuesContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.COMMA)
            else:
                return self.getToken(gramaticaParser.COMMA, i)

        def getRuleIndex(self):
            return gramaticaParser.RULE_update

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpdate" ):
                listener.enterUpdate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpdate" ):
                listener.exitUpdate(self)




    def update(self):

        localctx = gramaticaParser.UpdateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_update)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(gramaticaParser.UPDATE)
            self.state = 70
            self.match(gramaticaParser.INTO)
            self.state = 71
            self.match(gramaticaParser.TABLE)
            self.state = 72
            self.tableIdentifier()
            self.state = 73
            self.columnNames()
            self.state = 74
            self.match(gramaticaParser.ROWS)
            self.state = 75
            self.values()
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 76
                self.match(gramaticaParser.COMMA)
                self.state = 77
                self.values()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeleteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DELETE(self):
            return self.getToken(gramaticaParser.DELETE, 0)

        def TABLE(self):
            return self.getToken(gramaticaParser.TABLE, 0)

        def tableIdentifier(self):
            return self.getTypedRuleContext(gramaticaParser.TableIdentifierContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_delete

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDelete" ):
                listener.enterDelete(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDelete" ):
                listener.exitDelete(self)




    def delete(self):

        localctx = gramaticaParser.DeleteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_delete)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(gramaticaParser.DELETE)
            self.state = 84
            self.match(gramaticaParser.TABLE)
            self.state = 85
            self.tableIdentifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnNamesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PARENTHESIS(self):
            return self.getToken(gramaticaParser.LEFT_PARENTHESIS, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.IdentifierContext,i)


        def RIGHT_PARENTHESIS(self):
            return self.getToken(gramaticaParser.RIGHT_PARENTHESIS, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.COMMA)
            else:
                return self.getToken(gramaticaParser.COMMA, i)

        def getRuleIndex(self):
            return gramaticaParser.RULE_columnNames

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnNames" ):
                listener.enterColumnNames(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnNames" ):
                listener.exitColumnNames(self)




    def columnNames(self):

        localctx = gramaticaParser.ColumnNamesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_columnNames)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(gramaticaParser.LEFT_PARENTHESIS)
            self.state = 88
            self.identifier()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 89
                self.match(gramaticaParser.COMMA)
                self.state = 90
                self.identifier()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self.match(gramaticaParser.RIGHT_PARENTHESIS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValuesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PARENTHESIS(self):
            return self.getToken(gramaticaParser.LEFT_PARENTHESIS, 0)

        def constants(self):
            return self.getTypedRuleContext(gramaticaParser.ConstantsContext,0)


        def RIGHT_PARENTHESIS(self):
            return self.getToken(gramaticaParser.RIGHT_PARENTHESIS, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_values

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValues" ):
                listener.enterValues(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValues" ):
                listener.exitValues(self)




    def values(self):

        localctx = gramaticaParser.ValuesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_values)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(gramaticaParser.LEFT_PARENTHESIS)
            self.state = 99
            self.constants()
            self.state = 100
            self.match(gramaticaParser.RIGHT_PARENTHESIS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.ConstantContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.ConstantContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.COMMA)
            else:
                return self.getToken(gramaticaParser.COMMA, i)

        def getRuleIndex(self):
            return gramaticaParser.RULE_constants

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstants" ):
                listener.enterConstants(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstants" ):
                listener.exitConstants(self)




    def constants(self):

        localctx = gramaticaParser.ConstantsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_constants)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.constant()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 103
                self.match(gramaticaParser.COMMA)
                self.state = 104
                self.constant()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.COMMA)
            else:
                return self.getToken(gramaticaParser.COMMA, i)

        def getRuleIndex(self):
            return gramaticaParser.RULE_expressionList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionList" ):
                listener.enterExpressionList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionList" ):
                listener.exitExpressionList(self)




    def expressionList(self):

        localctx = gramaticaParser.ExpressionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expressionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.expression()
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 111
                self.match(gramaticaParser.COMMA)
                self.state = 112
                self.expression()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # BooleanExpressionContext
            self.operator = None # Token
            self.right = None # BooleanExpressionContext

        def identifier(self):
            return self.getTypedRuleContext(gramaticaParser.IdentifierContext,0)


        def compare(self):
            return self.getTypedRuleContext(gramaticaParser.CompareContext,0)


        def expression(self):
            return self.getTypedRuleContext(gramaticaParser.ExpressionContext,0)


        def booleanExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.BooleanExpressionContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.BooleanExpressionContext,i)


        def AND(self):
            return self.getToken(gramaticaParser.AND, 0)

        def OR(self):
            return self.getToken(gramaticaParser.OR, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_booleanExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanExpression" ):
                listener.enterBooleanExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanExpression" ):
                listener.exitBooleanExpression(self)



    def booleanExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = gramaticaParser.BooleanExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_booleanExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.identifier()
            self.state = 120
            self.compare()
            self.state = 121
            self.expression()
            self._ctx.stop = self._input.LT(-1)
            self.state = 131
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 129
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = gramaticaParser.BooleanExpressionContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_booleanExpression)
                        self.state = 123
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 124
                        localctx.operator = self.match(gramaticaParser.AND)
                        self.state = 125
                        localctx.right = self.booleanExpression(3)
                        pass

                    elif la_ == 2:
                        localctx = gramaticaParser.BooleanExpressionContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_booleanExpression)
                        self.state = 126
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 127
                        localctx.operator = self.match(gramaticaParser.OR)
                        self.state = 128
                        localctx.right = self.booleanExpression(2)
                        pass

             
                self.state = 133
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class CompareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUALS(self):
            return self.getToken(gramaticaParser.EQUALS, 0)

        def GT(self):
            return self.getToken(gramaticaParser.GT, 0)

        def GE(self):
            return self.getToken(gramaticaParser.GE, 0)

        def LT(self):
            return self.getToken(gramaticaParser.LT, 0)

        def LE(self):
            return self.getToken(gramaticaParser.LE, 0)

        def NE(self):
            return self.getToken(gramaticaParser.NE, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_compare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompare" ):
                listener.enterCompare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompare" ):
                listener.exitCompare(self)




    def compare(self):

        localctx = gramaticaParser.CompareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_compare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 130285568) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASTERISK(self):
            return self.getToken(gramaticaParser.ASTERISK, 0)

        def identifier(self):
            return self.getTypedRuleContext(gramaticaParser.IdentifierContext,0)


        def constant(self):
            return self.getTypedRuleContext(gramaticaParser.ConstantContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = gramaticaParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expression)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(gramaticaParser.ASTERISK)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.identifier()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 138
                self.constant()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.IDENTIFIER)
            else:
                return self.getToken(gramaticaParser.IDENTIFIER, i)

        def DOT(self):
            return self.getToken(gramaticaParser.DOT, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)




    def identifier(self):

        localctx = gramaticaParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_identifier)
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.match(gramaticaParser.IDENTIFIER)
                self.state = 142
                self.match(gramaticaParser.DOT)
                self.state = 143
                self.match(gramaticaParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.match(gramaticaParser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NULL(self):
            return self.getToken(gramaticaParser.NULL, 0)
